--- a/Road_Lap2.csproj
+++ b/Road_Lap2.csproj
@@ -83,7 +83,7 @@
     </Compile>
     <Compile Include="Settings\Intensity\IntensityFactory.cs" />
     <Compile Include="Settings\Intensity\IntensityAttribute.cs" />
-    <Compile Include="Settings\Roads\NameRoad.cs" />
+    <Compile Include="Settings\Roads\TypeRoad.cs" />
     <Compile Include="Settings\SpeedLimits.cs" />
     <Compile Include="Settings\Semaphore.cs" />
     <Compile Include="Container.cs" />
