--- a/Road_Lap2.csproj
+++ b/Road_Lap2.csproj
@@ -117,12 +117,11 @@
     <Compile Include="Settings\SystemSettings.cs" />
     <Compile Include="Settings\Roads\Traffic.cs" />
     <Compile Include="Roads\CarFold\CarMovementCalculations.cs" />
-    <Compile Include="Roads\CommonsMethodsForRoads.cs" />
-    <Compile Include="Roads\IRoad.cs" />
+    <Compile Include="Roads\RoadBase.cs" />
     <Compile Include="Roads\RoadComponents\Line.cs" />
     <Compile Include="Roads\RoadComponents\RoadMarking.cs" />
-    <Compile Include="Roads\RoadComponents\TrafficSignals.cs" />
     <Compile Include="Roads\RoadComponents\TrafficSignal.cs" />
+    <Compile Include="Roads\RoadComponents\TrafficSignalType.cs" />
     <Compile Include="RoadWindow.cs">
       <SubType>Form</SubType>
     </Compile>
